--- a/application-form.html
+++ b/application-form.html
@@ -2,16 +2,20 @@
 <html>
 <head>
     <title>Application Form</title>
-    <link rel='stylesheet' href='styles.css'>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-  <p>
+
+  <div>
     <h1>Application Form</h1>
-    <p id='box'>Please input your first and last name, salary requiremt as a number, and job you are applying for.</p>
+    <div class='box'>
+      Please input your first and last name, salary requiremt as a number, and job you are applying for.
+    </div>
 
     <form action='/application-success' method='POST'>
-      First name <input type='text' name='first'><br>
-      Last name <span class='bold'><input type='text' name='last'></span><br>
+      First name: <input type='text' name='first'><br>
+      Last name: <input type='text' name='last' class='thick'></span><br>
       Salary requirement: <input type='text' name='salary'><br>
       Job applying for 
       <select> 
@@ -21,6 +25,6 @@
       </select><br>
       <input type='submit' value='submit'>
     </form>
-  </p>
+  </div>
 </body>
 </html>
